--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "gen-api-types": "openapi-typescript ../backend/openapi.yml  --output ./src/shared/api/v1.d.ts  --properties-required-by-default"
   },
   "dependencies": {
     "pinia": "^3.0.1",
@@ -34,6 +35,7 @@
     "jiti": "^2.4.2",
     "jsdom": "^26.0.0",
     "npm-run-all2": "^7.0.2",
+    "openapi-typescript": "^7.6.1",
     "prettier": "3.5.3",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
