--- a/backend/dbconfig.yml
+++ b/backend/dbconfig.yml
@@ -7,4 +7,4 @@ development:
     dialect: postgres
     dir: ./migrations
     table: migration
-    datasource: host=localhost port=5432 dbname=stackies_dev user=postgres password=postgres sslmode=disable
+    datasource: host=${DB_HOST} port=${DB_PORT} dbname=${DB_NAME} user=${DB_USER} password=${DB_PASSWORD} sslmode=disable
